using 'font-display: swap' to ensure text remains visible during webfont load

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -8,6 +8,7 @@
 		src: url('/Comfortaa-Light.ttf');
 		font-weight: 300;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -15,6 +16,7 @@
 		src: url('/Comfortaa-Regular.ttf');
 		font-weight: 400;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -22,6 +24,7 @@
 		src: url('/Comfortaa-Medium.ttf');
 		font-weight: 500;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -29,6 +32,7 @@
 		src: url('/Comfortaa-Semibold.ttf');
 		font-weight: 600;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -36,6 +40,7 @@
 		src: url('/Comfortaa-Bold.ttf');
 		font-weight: 700;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -43,6 +48,7 @@
 		src: url('/OpenSans-Light.ttf');
 		font-weight: 300;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -50,6 +56,7 @@
 		src: url('/OpenSans-Regular.ttf');
 		font-weight: 400;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -57,6 +64,7 @@
 		src: url('/OpenSans-Medium.ttf');
 		font-weight: 500;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -64,6 +72,7 @@
 		src: url('/OpenSans-Semibold.ttf');
 		font-weight: 600;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -71,6 +80,7 @@
 		src: url('/OpenSans-Bold.ttf');
 		font-weight: 700;
 		font-style: normal;
+		font-display: swap;
 	}
 
 	@font-face {
@@ -78,6 +88,7 @@
 		src: url('/OpenSans-Italic.ttf');
 		font-weight: 400;
 		font-style: italic;
+		font-display: swap;
 	}
 
 	html {
